--- a/index.html
+++ b/index.html
@@ -169,95 +169,95 @@
       <div class="row">
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.1s">
-            <img src="img/main/featured/1.jpg" alt="sdasda" id="myImg">
-              <div id="myModal" class="modal">
-               <span class="close" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
+            <img src="img/main/featured/1.jpg" alt="sdasda" class="myImg">
+              <div class="myModal">
+               <span class="close">&times;</span>
                <img class="modal-content" id="img01">
-               <div id="caption"></div>
+               <div class="caption"></div>
              </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.2s">
-            <img src="img/main/featured/2.jpg" alt="asdsad" id="myImg1">
-            <div id="myModal1" class="modal">
-               <span class="close2" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img02">
-               <div id="caption2"></div>
+            <img src="img/main/featured/2.jpg" alt="asdsad" class="myImg">
+            <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.3s">
-            <img src="img/main/featured/3.jpg" alt="asdsad" id="myImg2">
-            <div id="myModal2" class="modal">
-               <span class="close3" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img03">
-               <div id="caption3"></div>
+            <img src="img/main/featured/3.jpg" alt="asdsad" class="myImg">
+            <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row">
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.1s">
-            <img src="img/main/featured/4.jpg" alt="asdsad" id="myImg3">
-            <div id="myModal3" class="modal">
-               <span class="close4" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img04">
-               <div id="caption4"></div>
+            <img src="img/main/featured/4.jpg" alt="sdasda" class="myImg">
+              <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.2s">
-            <img src="img/main/featured/5.jpg" alt="asdsad" id="myImg4">
-            <div id="myModal4" class="modal">
-               <span class="close5" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img05">
-               <div id="caption5"></div>
+            <img src="img/main/featured/5.jpg" alt="asdsad" class="myImg">
+            <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.3s">
-            <img src="img/main/featured/6.jpg" alt="asdsad" id="myImg5">
-            <div id="myModal5" class="modal">
-               <span class="close6" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img06">
-               <div id="caption6"></div>
+            <img src="img/main/featured/6.jpg" alt="asdsad" class="myImg">
+            <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row">
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.1s">
-            <img src="img/main/featured/7.jpg" alt="asdsad" id="myImg6">
-            <div id="myModal6" class="modal">
-               <span class="close7" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img07">
-               <div id="caption7"></div>
+            <img src="img/main/featured/7.jpg" alt="sdasda" class="myImg">
+              <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.2s">
-            <img src="img/main/featured/8.jpg" alt="asdsad" id="myImg7">
-            <div id="myModal7" class="modal">
-               <span class="close8" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img08">
-               <div id="caption8"></div>
+            <img src="img/main/featured/8.jpg" alt="asdsad" class="myImg">
+            <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 d-flex justify-content-center mt-5">
           <div class="main-featured_box wow rubberBand" data-wow-delay="0.3s">
-            <img src="img/main/featured/9.jpg" alt="asdsad" id="myImg8">
-            <div id="myModal8" class="modal">
-               <span class="close9" onclick="document.getElementById('myModal').style.display= 'none'">&times;</span>
-               <img class="modal-content" id="img09">
-               <div id="caption9"></div>
+            <img src="img/main/featured/9.jpg" alt="asdsad" class="myImg">
+            <div class="myModal">
+               <span class="close">&times;</span>
+               <img class="modal-content" id="img01">
+               <div class="caption"></div>
              </div>
           </div>
         </div>
